# zen

./: .gitignore  .travis.yml  README.md  default.nix  idyllen.epub  package.yaml  stack.yaml  zeno.hs  zenoberg.cabal
.github/workflows/: main.yml
gutenberg/: README.md  gutenberg.sh
src/: Main.hs
